--- a/composer.json
+++ b/composer.json
@@ -77,9 +77,10 @@
     "symfony-cmf/routing-bundle": "^2.0",
     "symfony/monolog-bundle": "^3.1.0",
     "symfony/polyfill-apcu": "^1.0",
-    "symfony/swiftmailer-bundle": "^2.4",
+    "symfony/swiftmailer-bundle": "^2.3.10",
     "symfony/symfony": "3.3.0-RC1",
     "tijsverkoyen/css-to-inline-styles": "~1.5",
+    "twig/twig": "^2.0",
     "vrana/adminer": "~4.2",
     "zendframework/zend-paginator": "^2.7",
     "zendframework/zend-servicemanager": "^3.2"
